4.5 -> 5.0:
    - jbj: bump library and API versions to 5.0.
    - rse: provide portability fallbacks for sighold(3), sigrelse(3) and sigpause(3)
    - rse: allow RPM to build again even if iconv(3) is not available
    - rse: provide --with-db-{largefile,rpc,mutex} options for flexibly building DB
    - rse: portability: replace hard-coded -ldl (Linux) for Lua with Autoconf checks
    - rse: added devtool/devtool.conf build environment helper
    - rse: pruned tree from third-party libraries (except for zlib, db and lua)
    - goeran: updated "sv" translation.
    - rse: cleaned up the "autogen.sh" scripts.
    - jbj: skip packages/headers with unverifiable signatures.
    - start rpm-5.0 development.

4.4.9 -> 4.5:
    - jbj: fix ptr alignment problem seen on pld/sparc64.
    - jbj: re-add /usr/bin/rpmbuild for now, poptBT option wiring needs fixing.
    - jbj: pass -F fnum to patch (#243720).
    - jbj: refactor _free() from rpmlib.h -> rpmio.h.
    - jbj: add _rpmhome macro, revector helper paths through _rpmhome.
    - jbj: hack a version into magic install path. better needs to be done.
    - jbj: start consistent versionlibdir usage in all Makefile.am files.
    - jbj: populate /usr/lib/rpm/@VERSION@/ instead of foo-@VERSION@ files.
    - jbj: move gendiff into the scripts directory.
    - jbj: don't include perl/CVS with "make dist".
    - jbj: remove rpmbuild and rpmb helper for now.
    - update README to point to new rpm5.org home.
    - upgrade to file-4.21 (CVE-2007-2026, CVE-2007-2799).
    - build against rpm5.org cvs,
    - fix: swap PART_INSTALL and PART_CLEAN automagic cleanup.
    - keys: add Getpass stub vector.
    - solaris: add clearenv stub.
    - fix: avoid accessing freed memory.
    - start rpm-4.5 development.

=============================================================================

4.4.8 -> 4.4.9:
	- start rpm-4.4.9 devel.
	- replace rpm2cpio with a shell script (#229422).
	- debugedit: canonicalize_path was broken (#232222).